k8s/skooner-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skooner-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web #, websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: skooner.lab.thewortmans.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-skooner
            port:
              number: 80
